stage0/tests/compile_fail/types/type_immutable.dg
func main() -> i32 {
    let x = 1
    x = 2
    x
}
